Pantalla bloqueada en vertical en activity_dades_element.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TaulaPeriòdica">
-        <activity android:name=".ActivityDadesElement"></activity>
+        <activity android:name=".ActivityDadesElement"
+            android:screenOrientation="portrait">
+
+        </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
