--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TaulaPeriòdica">
-        <activity android:name=".ActivityDadesElement"
+        <activity android:name=".ActivityGame"></activity>
+        <activity
+            android:name=".ActivityDadesElement"
             android:screenOrientation="portrait">
-            <intent-filter android:scheme="http"
+            <intent-filter
+                android:scheme="http"
                 tools:ignore="AppLinkUrlError">
-                <action android:name="android.intent.action.VIEW"
+                <action
+                    android:name="android.intent.action.VIEW"
                     tools:ignore="AppLinkUrlError" />
                 <action android:name="android.intent.action.SEND" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
