Creado package "game" que contendrá las classes del juego

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TaulaPeriòdica">
-        <activity android:name=".ActivityGame"></activity>
+        <activity android:name=".game.ActivityGame"></activity>
         <activity
             android:name=".ActivityDadesElement"
             android:screenOrientation="portrait">
