Classes y layouts de juegos creados

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TaulaPeriòdica">
-        <activity android:name=".game.modalitats.ActivityGameEncertarSimbol"></activity>
+        <activity android:name=".game.modalitats.ActivityGameEncertarNumero"></activity>
+        <activity android:name=".game.modalitats.ActivityGameEncertarEstat" />
+        <activity android:name=".game.modalitats.ActivityGameEncertarSimbol" />
         <activity android:name=".game.modalitats.ActivityGameEncertarNom" />
         <activity
             android:name=".game.ActivityGame"
