--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TaulaPeriòdica">
-        <activity android:name=".game.modalitats.ActivityGameEncertarNumero"
-            android:screenOrientation="portrait">
-
-        </activity>
-        <activity android:name=".game.modalitats.ActivityGameEncertarEstat"
+        <activity android:name=".personalitzar.ActivityPersonalitzarColors"></activity>
+        <activity
+            android:name=".game.modalitats.ActivityGameEncertarNumero"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".game.modalitats.ActivityGameEncertarEstat"
             android:screenOrientation="portrait" />
-        <activity android:name=".game.modalitats.ActivityGameEncertarSimbol"
+        <activity
+            android:name=".game.modalitats.ActivityGameEncertarSimbol"
             android:screenOrientation="portrait" />
-        <activity android:name=".game.modalitats.ActivityGameEncertarNom"
+        <activity
+            android:name=".game.modalitats.ActivityGameEncertarNom"
             android:screenOrientation="portrait" />
         <activity
             android:name=".game.ActivityGame"
